--- a/lantian.plist
+++ b/lantian.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://down.vmo5.cn/xlylc.ipa</string>
+					<string>https://api-wzjj.oss-cn-beijing.aliyuncs.com/1utu/1UTU/1utu.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
